incomplete work on Game as state machine